# lede

./: .gitignore  .mise.toml  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
briefing/: adapters.py  admin.py  apps.py  llm.py  llm_deepseek.py  llm_subscription.py  models.py  search.py  tasks.py  urls.py  views.py
briefing/management/commands/: smoke_digest.py
briefing/migrations/: 0001_initial.py
briefing/sources/: __init__.py  _http.py  readwise.py  rss.py
briefing/static/: manifest.json  sw.js
briefing/templates/briefing/: archive.html  base.html  dashboard.html  digest_detail.html  digest_email.html  search.html
config/: celery.py  urls.py
config/settings/: base.py  local.py  production.py  test.py
docs/superpowers/plans/: 2026-06-15-cross-source-briefing-pipeline.md  2026-06-15-cross-source-briefing-web-surface.md
docs/superpowers/specs/: 2026-06-15-cross-source-briefing-design.md
tests/: conftest.py  test_adapters.py  test_admin_actions.py  test_auth.py  test_build_digest.py  test_celery_wiring.py  test_kick_off_weekly.py  test_llm.py  test_llm_deepseek.py  test_llm_subscription.py  test_models.py  test_pipeline_integration.py  test_poll_all_sources.py  test_poll_source.py  test_pwa.py  test_search.py  test_search_vector.py  test_send_digest.py  test_smoke_command.py  test_sources.py  test_summarise_item.py  test_views.py
tests/fixtures/: sample_feed.xml
